--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@ layout: main
             <div class="col-md-3 col-md-offset-1">
                 <!-- START ABOUT IMAGE AREA -->
                 <div class="about-image wow fadeInUp" data-wow-delay="0.1s">
-                    <img class="round-img" src="{{ "/assets/img/authors/" | prepend: site.baseurl | append: site.author-img }}"  alt="{{site.author}}">
+                    <img class="round-img" src="{{ "/assets/img/authors/" | prepend: site.baseurl | append: site.data.author.Image }}"  alt="{{ site.data.author.Name }}">
                 </div>
                 <!-- / END ABOUT IMAGE AREA -->
             </div>
             <div class="col-md-6 col-md-offset-1">
                 <!-- START ABOUT TEXT AREA -->
                 <div class="about-text">
-                    <h2 class="wow fadeInUp" data-wow-delay="0.4s">I'm a {{site.author-title}}</h2>
-                    <p class="wow fadeInUp" data-wow-delay="0.6s">{{site.about-author}}</p>
-                    {% if site.skills %}
+                    <h2 class="wow fadeInUp" data-wow-delay="0.4s">I'm a {{ site.data.author.Title }}</h2>
+                    <p class="wow fadeInUp" data-wow-delay="0.6s">{{ site.data.author.About }}</p>
+                    {% if site.data.author.Skills %}
                     <ul class="wow fadeInUp" data-wow-delay="0.8s">
-                        {% for skill in site.skills %}
+                        {% for skill in site.data.author.Skills %}
                         <li>{{ skill }}</li>
                         {% endfor %}
                     </ul>
@@ -53,22 +53,22 @@ layout: main
 
         <div class="row">
             {% for project in site.data.projects %}
-            {% assign img = project.screenshots |first %}
+            {% assign img = project.screenshots | first %}
             <div class="col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                 <div class="box box-style">
-                    <a class="image featured"><img src="/assets/img/project/{{img.Image_URL}}" alt="{{project.Title}}" /></a>
-                    <h3><a >{{project.Title}}</a></h3>
-                    <p>{{project.Description  | truncatewords: 20 }}</p>
+                    <a class="image featured"><img src="{{ '/assets/img/project/' | prepend: site.baseurl | append: img.Image_URL }}" alt="{{ project.Title }}" /></a>
+                    <h3><a >{{ project.Title }}</a></h3>
+                    <p>{{ project.Description  | truncatewords: 20 }}</p>
                     <div class="project-btn">
                         <ul >
                             {% if project.Github_URL %}
                             <li>
-                            <a  href="{{project.Github_URL}}" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i> Source Code </a>
+                            <a  href="{{ project.Github_URL }}" target="_blank"> <i class="fa fa-github" aria-hidden="true"></i> Source Code </a>
                             </li>
                             {% endif %}
                             {% if project.screenshots %}
                             <li>
-                            <a data-toggle="modal" data-target="#screenshot{{forloop.index}}"> <i class="fa fa-picture-o" aria-hidden="true"></i> Screenshots </a>
+                            <a data-toggle="modal" data-target="{{ '#screenshot' | append: forloop.index }}"> <i class="fa fa-picture-o" aria-hidden="true"></i> Screenshots </a>
                             </li>
                             {% endif %}
                         </ul>
@@ -82,15 +82,15 @@ layout: main
 
 {% for project in site.data.projects %}
 {% assign project_slug =  project.Title | slugify: 'pretty' %}
-<div class="modal fade" id="screenshot{{forloop.index}}" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade" id="{{ 'screenshot' | append: forloop.index }}" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body" style="padding:0px;">
-                <div id="{{project_slug}}" class="carousel slide" data-ride="carousel">
+                <div id="{{ project_slug }}" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
                         {% for img in project.screenshots %}
-                      <li data-target="#{{project_slug}}" data-slide-to="{{forloop.index0}}" {% if forloop.first %}class="active"{% endif %}></li>
+                      <li data-target="#{{ project_slug }}" data-slide-to="{{ forloop.index0 }}" {% if forloop.first %}class="active"{% endif %}></li>
                         {% endfor %}
                     </ol>
 
@@ -98,21 +98,20 @@ layout: main
                     <div class="carousel-inner" role="listbox">
                         {% for img in project.screenshots %}
                         <div class="item {% if forloop.first %}active{% endif %}">
-                            <img src="/assets/img/project/{{img.Image_URL}}" alt="{{img.Image_URL}}">
-                        <div class="carousel-caption">
-                               <!--h3>{{img.Image_About}}</h3-->
-                               <p>{{img.Image_About}}</p>
+                            <img src="{{ '/assets/img/project/' | prepend: site.baseurl | append: img.Image_URL }}" alt="{{ img.Image_URL }}">
+                            <div class="carousel-caption">
+                               <p>{{ img.Image_About }}</p>
                             </div>
                         </div>
                         {% endfor %}
                     </div>
 
                     <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#{{project_slug}}" role="button" data-slide="prev">
+                    <a class="left carousel-control" href="#{{ project_slug }}" role="button" data-slide="prev">
                       <span class="fa fa-angle-left"></span>
                       <span class="sr-only">Previous</span>
                     </a>
-                    <a class="right carousel-control" href="#{{project_slug}}" role="button" data-slide="next">
+                    <a class="right carousel-control" href="#{{ project_slug }}" role="button" data-slide="next">
                       <span class="fa fa-angle-right"></span>
                       <span class="sr-only">Next</span>
                     </a>
@@ -122,10 +121,10 @@ layout: main
     </div>
 </div>
 {% endfor %}
+<!-- END PROJECTS AREA -->
 
 
-
-<section id="testimonial" class="testimonial-area section-padding">
+<section id="review" class="review-area section-padding">
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
@@ -136,12 +135,12 @@ layout: main
         </div>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
-                <div class="testimonial-list">
+                <div class="review-list">
                     {% for review in site.data.linkedin_recommendations %}
-                    <div class="single-testimonial text-center">
-                        <p>{{review.Recommendation}}</p>
-                        <h2>{{review.Name}}</h2>
-                        <h3>{{review.Current_Position}}</h3>
+                    <div class="single-review text-center">
+                        <p>{{ review.Recommendation }}</p>
+                        <h2>{{ review.Name }}</h2>
+                        <h3>{{ review.Current_Position }}</h3>
                     </div>
                     {% endfor %}
                 </div>
